--- a/Style.css
+++ b/Style.css
@@ -1,108 +1,208 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.contener{
-width: 90%; ;
-margin: auto;
-
+.contener {
+  width: calc(100% - 140px);
+  margin: auto;
 }
-.header{
-    background-color: #fff;
-    position:fixed;
-    width: 100%;
-    z-index: 9;
-    
-}
-body{
-    background-color: ghostwhite;
-    height: 9999px;
-
-}   
-.navbar{
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    height: 70px;
-}
-.icon{
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-}
-.icon a{
-color: #545BE8;
-text-align: center;
-font-family: Roboto;
-font-size: 15px;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
-text-decoration: none;
-margin-top:10px;
+.header {
+  background-color: #fff;
+  position: sticky;
+  z-index: 9;
+  top: 0;
 }
 
-.list{
-    display: flex;
-    flex-wrap: wrap;
+body {
+  background-color: ghostwhite;
 }
-.list ul{
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-align-items: center;
-gap: 20px;
+.navbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 70px;
+}
+.icon {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+}
+.icon a {
+  text-align: center;
+  font-family: Roboto;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  text-decoration: none;
+  margin-top: 10px;
+  transition-duration: 2s;
+}
+.button a:hover{
+background-color: #545be8;
+color: #fff;
+font-size: 20px;
+font-weight: 150;
 
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
 }
 .list ul {
-list-style-type: none;
-gap: 50px;
-    
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
-.list ul li a{
-color: #101928;
-font-family: Poppins;
-font-size: 20px;
-font-style: normal;
-font-weight: 100;
-line-height: normal;
-text-decoration: none;
-  
+.list ul {
+  list-style-type: none;
+  gap: 50px;
+}
+.list ul li a {
+  color: #101928;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 100;
+  line-height: normal;
+  text-decoration: none;
+  transition-duration: 0.40s;
+}
+.list a:hover{
+    color: #545be8;
+    font-size: 25px;
+    font-weight: 300;
+    
 }
 
-.button{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 10px 30px;
-    gap: 20px;
+.button {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 30px;
+  gap: 20px;
 }
-.button a{
-    border-radius: 10px;
-    border: 0.412px solid #545BE8;
-    text-decoration: none;
-    padding: 10px 15px;
-    
-    
+.button a {
+  border-radius: 10px;
+  border: 0.412px solid #545be8;
+  text-decoration: none;
+  padding: 10px 15px;
 }
-#login{
+#register {
+  background: #545be8;
+  color: white;
+}
+.icon {
+  gap: 5px;
+}
+.icon svg {
+  width: 35px;
+  height: 35px;
+  flex-shrink: 0;
+}
+main {
+  height: 100vh;
+}
+footer {
+  padding: 50px;
+  background-color: #393e46;
+  color: #fff;
+}
+
+footer .row {
+  display: flex;
+  flex-wrap: wrap;
+}
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
+footer .icon a {
+  color: #fff;
+}
+footer .row {
+  gap: 80px;
+}
+.footer-left-side,
+.footer-right-side {
+  width: calc((100% - 80px) / 2);
+  color: var(--light, #f4f4f4);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+.footer-left-side {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.footer-left-side p {
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.footer-left-side .social {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.footer-left-side .social svg {
+  width: 20px;
+  height: 20px;
+  border: solid 1px;
+  padding: 5px;
+  box-sizing: content-box;
+  transition-duration: 0.40s;
+}
+.footer-left-side .social svg:hover{
+   background-color: gray;
+   width: 30px;
+   height: 30px;
+   border: solid 2px;
    
 }
-#register{
-    background: #545BE8;
-    color: white;
+.footer-right-side {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  text-align: center;
+  margin-top: 50px;
+    justify-content: space-evenly;
 }
-.icon{
-    gap: 5px;
+.footer-right-side .item {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 25px;
+  width: calc((100% -120px) / 4);
 }
-.icon svg{ 
-    width: 35px;
-    height: 35px;
-    flex-shrink: 0;
+.footer-right-side .item nav {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 10px;
 }
+.footer-right-side nav a{
+    font-size: 15px;
+    transition-duration: 0.30s;
+}
+
+.footer-right-side nav a:hover{
+    color: 	rgb(255,215,0);
+    font-size: 20px;
+    font-weight: 150;
+   
+}
+
 
 
 
